--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h3>3 Go to work</h3>
   </div>
   <div
-      class="slide active"
+      class="slide"
       style="
           background-image: url('https://images.unsplash.com/photo-1570649857669-4ad9f896435d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=767&q=80');
         "
